# advancemame

./: .gitignore  .travis.yml  CNAME  COPYING  Makefile.in  Makefile.usr  README  TODO  aclocal.m4  authors.html  autogen.sh  berry-readme.html  blit.html  boot-download.html  boot-history.html  boot-readme.html  cab-download.html  cab-history.html  cab-readme.html  cd-download.html  cd-history.html  cd-readme.html  cd-snapshot.html  comp-download.html  comp-history.html  comp-readme.html  configure  configure.ac  configure.berry  configure.berry64  configure.debugger  configure.dos  configure.icc  configure.msdos  configure.windows  cost.html  cvsdiff  cvsdiffall  doc-advcd.html  doc-advcfg.html  (+74 more)
.github/workflows/: build.yml
advance/: advance.mak  advmame.dif  advmess.dif  advpac.dif  blue.mak  cab.mak  cfg.mak  d2.mak  emu.mak  i.mak  j.mak  k.mak  lib.cfg  lib.mak  line.mak  m.mak  menu.mak  mess.dif  s.mak  v.mak  version.mak
advance/blit/: blit.c  blit.h  clear.c  clear.h  hq2x.c  hq2x.h  hq2x3.c  hq2x3.h  hq2x4.c  hq2x4.h  hq3x.c  hq3x.h  hq4x.c  hq4x.h  icconv.h  icommon.h  icopy.h  idouble.h  imax.h  imean.h  interp.c  interp.h  irgb.h  iscale.h  iunchain.h  lq2x.c  lq2x.h  lq2x3.c  lq2x3.h  lq2x4.c  lq2x4.h  lq3x.c  lq3x.h  lq4x.c  lq4x.h  scale2k.c  scale2k.h  scale2x.c  scale2x.h  scale3k.c  (+26 more)
advance/blue/: blue.c
advance/card/: board.c  board.h  card.c  card.h  cati.c  ccirrus.c  cirrus.h  claguna.c  cmatrox.c  cneomagi.c  cr128.c  cs3.c  csavage.c  csis.c  ctdfx.c  ctrident.c  cvbe3.c  map.c  map.h  pci.c  pci.h
advance/cfg/: cfg.c  edid.c  list.c
advance/common/: compil.h  option.h
advance/d2/: d2.cc
advance/dos/: allegro2.h  compil.h  file.c  idos.c  idos.h  jalleg.c  jalleg.h  jlgalleg.c  jlgalleg.h  kalleg.c  kalleg.h  malleg.c  malleg.h  map.c  map.h  os.c  os.h  osdos.h  pci.c  pci.h  pcimap.c  pcimap.h  salleg.c  salleg.h  scrvbe.c  scrvbe.h  scrvga.c  scrvga.h  snprintf.c  sseal.c  sseal.h  svsync.c  svsync.h  target.c  vsvgal.c  vsvgal.h  vvbe.c  vvbe.h  vvbel.c  vvbel.h  (+4 more)
advance/expat/: README  expat-1.95.6.diff  expat-1.95.7.diff  expat-1.95.8.diff  expat.h  expat_external.h  expatcfg.h  intconfig.h  internal.h  intexpat.h  xmlparse.c  xmlrole.c  xmltok.c
advance/i/: i.c
advance/j/: j.c
advance/k/: k.c
advance/lib/: advance.h  advstd.h  bitmap.c  bitmap.h  complex.c  complex.h  conf.c  conf.h  config.hin  crtc.c  crtc.h  crtcbag.c  crtcbag.h  device.c  device.h  dft.c  dft.h  endianrw.h  error.c  error.h  extra.h  file.h  filedos.c  filenix.c  filter.c  filter.h  font.c  font.h  fontdef.c  fontdef.h  fz.c  fz.h  generate.c  generate.h  gtf.c  gtf.h  icon.c  icon.h  icondef.h  icondef.rc  (+89 more)
advance/line/: Makefile  line.cc  vgamode.h
advance/linux/: event.c  event.h  file.c  ilinux.c  ilinux.h  islang.c  islang.h  itty.c  itty.h  jevent.c  jevent.h  joverride.py  joverride.python  jraw.c  jraw.h  jsvgab.c  jsvgab.h  kevent.c  kevent.h  kraw.c  kraw.h  ksvgab.c  ksvgab.h  mevent.c  mevent.h  mraw.c  mraw.h  ms.c  msvgab.c  msvgab.h  os.c  os.h  osint.h  oslinux.h  salsa.c  salsa.h  soss.c  soss.h  target.c  vcurses.c  (+9 more)
advance/m/: m.c
advance/menu/: allocw.cc  category.cc  category.h  choice.cc  choice.h  color.cc  color.h  common.cc  common.h  crc.cc  crc.h  emulator.cc  emulator.h  emuxml.cc  event.cc  event.h  game.cc  game.h  mconfig.cc  mconfig.h  menu.cc  menu.h  mm.cc  play.cc  play.h  playdef.cc  playsnd.cc  resource.cc  resource.h  submenu.cc  submenu.h  text.cc  text.h
advance/mpglib/: dct64.c  decode.c  huffman.h  interfac.c  internal.c  layer3.c  mpg123.h  mpglib.h  readme.txt  tabinit.c
advance/off/: deflib.c  makefile  off.c
advance/osd/: Makefile  adjust.h  advance.c  advance.h  alloc.h  allocw.c  allocz.c  blitmax.h  dvg.c  dvg.h  emu.c  emu.h  estimate.c  fileio.c  frame.c  fuzzy.c  fuzzy.h  global.c  glue.c  glue.h  glueint.h  hscript.c  hscript.h  input.c  input.h  lexyy.c  mame2.h  menu.c  mode.c  osd_cpu.h  osdutils.h  osinline.h  (+21 more)
cab/: index.html
doc/: advblue.d  advcfg.1  advcfg.d  advcfg.html  advcfg.txt  advdev.1  advdev.d  advdev.html  advdev.txt  advj.1  advj.d  advj.html  advj.txt  advk.1  advk.d  advk.html  advk.txt  advline.d  advline.html  advline.txt  advm.1  advm.d  advm.html  advm.txt  advmame.1  advmame.d  advmame.html  advmame.txt  advmenu.1  advmenu.d  advmenu.html  advmenu.txt  advmenuc.bat  advmenuv.bat  advmessv.bat  advpacc.bat  advpacv.bat  advs.1  advs.d  advs.html  (+102 more)
drivers/: denjinmk.c  legionna.c
extra/: cost.sh
machine/: seicop.c
mess/: advance.pat  artworkx.c  artworkx.h  compcfg.c  device.c  device.h  eventlst.c  filemngr.c  hashfile.c  image.c  image.h  infomess.c  infomess.h  inputx.c  inputx.h  mesintrf.c  mesintrf.h  mess.c  mess.h  mess.mak  messdriv.c  messdrv.h  mesvalid.c  mscommon.c  mui_text.c  mui_text.h  opresolv.c  osd_mess.h  pool.c  pool.h  tapectrl.c  tinyms.mak  unicode.c  unicode.h  utils.h
raspberry/: README  TECH
src/: artwork.c  artwork.h  audit.h  cdrom.h  chd.h  chdcd.c  chdcd.h  cheat.h  config.c  config.h  core.mak  cpuexec.c  cpuexec.h  cpuint.h  cpuintrf.c  cpuintrf.h  debugger.h  drawgfx.c  drawgfx.h  driver.h  fileio.c  fileio.h  harddisk.h  hash.c  hash.h  hiscore.c  hiscore.h  info.c  info.h  inptport.c  inptport.h  input.c  input.h  jedparse.c  jedutil.c  mame.c  mame.mak  mamecore.c  mamedriv.c  memory.c  (+27 more)
srcmess/: artwork.c  audit.c  audit.h  cdrom.c  cdrom.h  chdcd.h  chdman.c  cheat.c  cheat.h  config.c  config.h  core.mak  cpuexec.c  cpuexec.h  cpuint.c  cpuint.h  drawgfx.h  driver.c  driver.h  harddisk.c  hash.c  hash.h  info.c  info.h  inptport.c  inptport.h  input.c  input.h  jedparse.h  mame.c  mame.h  mamecore.h  memconv.h  memory.h  osdepend.h  palette.c  profiler.c  profiler.h  romload.c  romload.h  (+24 more)
support/: advmess.1  advmessc.bat  category.ini  debian  debian.amd64  debian.armhf  extended.rc  genre.ini  medium.rc  ntsc.rc  pal.rc  pcsvga60.rc  pcvga.rc  standard.rc  vbev.bat  vgav.bat  video.pcx  videobis.pcx  videowv.bat
support/confbin/: INSTALL  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
(+3162 files in other folders)
